[workspace]
members = ["red_moon_mlua", ".", "red_moon_cli"]

[package]
name = "red_moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
indexmap = "2"
slotmap = "1"
downcast = "0.11"
cpu-time = "1"
rustc-hash = "2"

[dev-dependencies]
pretty_assertions = "1"

[profile.profiling]
inherits = "release"
debug = "limited"

[features]
# separate feature as it slows down the interpreter
instruction_exec_counts = []
